{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 17,
  "lineage": "7c5ae200-265b-a763-f878-49a59f2c189e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043b69f3d5fa388d9",
            "domain": "vpc",
            "id": "eipalloc-043b69f3d5fa388d9",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-64-98.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.64.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:internet-gateway/igw-0d6a7a2f4ab94eb2c",
            "id": "igw-0d6a7a2f4ab94eb2c",
            "owner_id": "052937454741",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-igw"
            },
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043b69f3d5fa388d9",
            "connectivity_type": "public",
            "id": "nat-03e5745b80ff649a2",
            "network_interface_id": "eni-0f23b8eae3c7e1262",
            "private_ip": "10.0.1.8",
            "public_ip": "3.37.64.98",
            "subnet_id": "subnet-0ff7ed1ee05ddb73f",
            "tags": {
              "Name": "user**-nat-gw"
            },
            "tags_all": {
              "Name": "user**-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d6a7a2f4ab94eb2c",
            "id": "r-rtb-0ef11dcc4af3f9f681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef11dcc4af3f9f68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0204f54bc08a562811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03e5745b80ff649a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0204f54bc08a56281",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:route-table/rtb-0204f54bc08a56281",
            "id": "rtb-0204f54bc08a56281",
            "owner_id": "052937454741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:route-table/rtb-0ef11dcc4af3f9f68",
            "id": "rtb-0ef11dcc4af3f9f68",
            "owner_id": "052937454741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09895d0a4186a4716",
            "route_table_id": "rtb-0204f54bc08a56281",
            "subnet_id": "subnet-046278e54d1a78f41"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00420e8d851cba857",
            "route_table_id": "rtb-0204f54bc08a56281",
            "subnet_id": "subnet-045c7dc60994683db"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5239b708906f46f",
            "route_table_id": "rtb-0ef11dcc4af3f9f68",
            "subnet_id": "subnet-0ff7ed1ee05ddb73f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac6ba2bf01595e16",
            "route_table_id": "rtb-0ef11dcc4af3f9f68",
            "subnet_id": "subnet-0bfc8d47ef90d5dfc"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-046278e54d1a78f41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046278e54d1a78f41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-0"
            },
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-045c7dc60994683db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045c7dc60994683db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-private-subnet-1"
            },
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0ff7ed1ee05ddb73f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff7ed1ee05ddb73f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-0"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-0"
            },
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:subnet/subnet-0bfc8d47ef90d5dfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfc8d47ef90d5dfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052937454741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-public-subnet-1"
            },
            "vpc_id": "vpc-0ad27eea2786d2489"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:052937454741:vpc/vpc-0ad27eea2786d2489",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022887c5049ae414a",
            "default_route_table_id": "rtb-0c25ccfe7ff8f2d9c",
            "default_security_group_id": "sg-0cc6e69b1775cc64c",
            "dhcp_options_id": "dopt-06a9498791bb6ebc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ad27eea2786d2489",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c25ccfe7ff8f2d9c",
            "owner_id": "052937454741",
            "tags": {
              "Managed_by": "terraform",
              "Name": "user**-vpc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "user**-vpc"
            }
          }
        }
      ]
    }
  ]
}